made changes to code tag

--- a/main.html
+++ b/main.html
@@ -25,12 +25,12 @@
 		<span>Test2</span>
 		Answer: Inline
 	</div>
-	<!-- p  -->
+	<!-- p 
 	<div data-ns-test="block-inline-p">
 		<p>Test1</p>
 		<p>Test2</p>
 		Answer: Block
-	</div>
+	</div> -->
 	<!-- input  -->
 	<div data-ns-test="block-inline-input">
 		<input>Test1</input>
@@ -44,12 +44,12 @@
 		Answer: Inline
 	</div>
 	
-	<!-- code
-	<div data-ns-test="block-inline-">
-		<div>Test1</div>
-		<div>Test2</div>
-		Answer: 
-	</div> -->
+	 code
+	<div data-ns-test="block-inline-code">
+		<code>Test1</code>
+		<code>Test2</code>
+		Answer: Inline
+	</div> 
 	
 	<!-- p  -->
 	<div data-ns-test="block-inline-p">
